// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert action of Alert custom action 1`] = `
<div
  class="ant-alert ant-alert-success"
  data-show="true"
  role="alert"
>
  <span
    aria-label="check-circle"
    class="anticon anticon-check-circle ant-alert-icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="check-circle"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
      />
    </svg>
  </span>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Tips
    </div>
    <div
      class="ant-alert-description"
    />
  </div>
  <div
    class="ant-alert-action"
  >
    <button
      class="ant-btn ant-btn-text ant-btn-sm"
      type="button"
    >
      <span>
        UNDO
      </span>
    </button>
  </div>
  <button
    class="ant-alert-close-icon"
    tabindex="0"
    type="button"
  >
    <span
      aria-label="close"
      class="anticon anticon-close"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Alert could accept none react element icon 1`] = `
<div
  class="ant-alert ant-alert-success"
  data-show="true"
  role="alert"
>
  <span
    class="ant-alert-icon"
  >
    icon
  </span>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Tips
    </div>
    <div
      class="ant-alert-description"
    />
  </div>
</div>
`;

exports[`Alert rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon ant-alert-rtl"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    />
    <div
      class="ant-alert-description"
    />
  </div>
</div>
`;
